# firewater-multiplayer

./: .gitignore  CMakeLists.txt  README.md
src/client/: game.c  game.cpp  game.h  main.c  main.cpp  net.c  net.h  platform.h
src/client/game_test/: CMakeLists.txt  main.cpp  net.c  net.h
src/common/: common.c  common.h
src/server/: main.c
